v2.3.2 (2019.10.xx)
  - Enforce previosuly relaxed rules regarding invalid JSON data retrieved from the backend and/or local devices

v2.3.1 (2019.09.30)
  - Fix potential for a race condition in background task scheduler when synchronously executing a task
  - Improve performance of backend series episode (timers) discovery
  - (Windows) Wait for IPv4 network connectivity to become available before executing wakeup discovery tasks

v2.3.0 (2019.09.12)
  - Update cURL library to version 7.66.0
  - Fix bug that caused "DVR Service Subscription Required" errors when a storage engine (HDHomeRun SERVIO) is the only DVR authorized device
  - Remove specific tuner/storage distinction from device discovery to allow for devices that are both types (HDHomeRun SCRIBE)

v2.2.2 (2019.08.30)
  - Restore shortened channel group names "HD channels, "SD channels", "Favorite channels", and "Demo channels"
  - Treat "News" Recorded TV category mapping as "Series"; avoids creation of "News" folder in Recorded TV
  - Change recording identifier values to work around Kodi issue where attempting to play a recording multiple times may fail

v2.2.1 (2019.08.02)
  - Add Recorded TV category mapping for "News"
  - Report available DVR drive space to Kodi when available from detected RECORD engines
  - Add "Disable specialized Recorded TV category folders" setting
  - Use more verbose channel group names -- "High Definition channels" vs. "HD Channels", for example
  - Use a scheduled task to re-enable EPG data requests after a grace period of 10 minutes has expired

v2.2.0 (2019.07.20)
  - Update cURL library to version 7.65.3
  - Update libhdhomerun library to version 20190625
  - Update SQLite database engine to version 3.29.0
  - Add support for legacy RTP/UDP streaming directly from tuner devices
  - Add "Append repeat indicators to applicable episode names" setting
  - Add "Preferred tuner streaming protocol" advanced setting