@@ -1350,6 +1350,10 @@ static bool try_getepgforchannel(ADDON_HANDLE handle, PVR_CHANNEL const& channel
 		std::string authorization = get_authorization_strings(dbhandle, false);
 		if(authorization.length() == 0) throw string_exception(__func__, ": no valid tuner device authorization string(s) available");
 
+		// Silently limit the end time to no more than 24 hours into the future if there are no
+		// DVR authorized tuners; this prevents requesting data the backend cannot provide
+		if(!has_dvr_authorization(dbhandle)) end = std::min(end, time(nullptr) + 86400);
+
 		// EPG_TAG uses pointers instead of string buffers, collect all of the string data returned 
 		// from the database in a list<> to keep them valid until transferred
 		std::list<std::string> epgstrings;
